src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>TMF_Expected_Completion_Date__c</fullName>
        <description>TMFORUM: Expected delivery date amended by the provider</description>
        <inlineHelpText>Expected delivery date</inlineHelpText>
        <label>Expected Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TMF_External_ID__c</fullName>
        <description>TMFORUM: ID given by the consumer and only understandable by him (to facilitate searches afterwards)</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMF_Notification_Contact__c</fullName>
        <description>TMFORUM: Contact attached to the order to send back information regarding this order</description>
        <label>Notification Contact</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TMF_Order_Priority__c</fullName>
        <description>TMFORUM: A way that can be used by consumers to prioritise orders in OM system (from 0 to 4 : 0 is the highest priority, and 4 the lowest)</description>
        <inlineHelpText>A way that can be used by consumers to prioritise orders in OM system (from 0 to 4 : 0 is the highest priority, and 4 the lowest)</inlineHelpText>
        <label>Order Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMF_Requested_Completion_Date__c</fullName>
        <description>TMFORUM: Requested delivery date from the requestor perspective</description>
        <inlineHelpText>Requested delivery date from the requestor perspective</inlineHelpText>
        <label>Requested Completion Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>